Visitor_Capps/src/main/java/capps/interpreter/parser/cfg.txt
Statement   ::= Assignment | Conditional | While | Compound
Assignment  ::= Var := Expr
Conditional ::= if Expr then Statement else Statement
While       ::= while Expr do Statement
Compound    ::= begin Statement; ...; Statement; end

expr := factor | factor + expr | factor - expr
factor := simple | simple * factor | simple / factor
simple := number | identifier | "(" expr ")"
